Analizador/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INSERT
    PUSH
    REMOVE
    RETURN
    STR

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones main instrucciones
Rule 2     main -> FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instrucciones -> <empty>
Rule 6     instruccion -> imprimir PTCOMA
Rule 7     instruccion -> if
Rule 8     instruccion -> while
Rule 9     instruccion -> continue PTCOMA
Rule 10    instruccion -> break PTCOMA
Rule 11    instruccion -> loop
Rule 12    instruccion -> match
Rule 13    instruccion -> declaracion PTCOMA
Rule 14    instruccion -> asignacion PTCOMA
Rule 15    instruccion -> forin
Rule 16    expresion -> VEC NOT CORIZQ expresiones CORDER
Rule 17    expresion -> VEC NOT CORIZQ expresion PTCOMA expresion CORDER
Rule 18    expresion -> VVEC DDOSPT NEW PARIZQ PARDER
Rule 19    expresion -> VVEC DDOSPT WITH_CAPACITY PARIZQ expresion PARDER
Rule 20    expresion -> nativas_vec
Rule 21    nativas_vec -> expresion PTO LEN PARIZQ PARDER
Rule 22    nativas_vec -> expresion PTO CAPACITY PARIZQ PARDER
Rule 23    nativas_vec -> expresion PTO CONTAINS PARIZQ SIGNOI expresion PARDER
Rule 24    imprimir -> PRINTLN NOT PARIZQ expresiones PARDER
Rule 25    declaracion -> LET MUT ID DOSPT tipo IGUAL expresion
Rule 26    declaracion -> LET MUT ID IGUAL expresion
Rule 27    declaracion -> LET ID DOSPT tipo IGUAL expresion
Rule 28    declaracion -> LET ID IGUAL expresion
Rule 29    asignacion -> ID IGUAL expresion
Rule 30    asignacion -> ID indices IGUAL expresion
Rule 31    indices -> indices indice
Rule 32    indices -> indice
Rule 33    indice -> CORIZQ expresion CORDER
Rule 34    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER
Rule 35    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER else
Rule 36    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif
Rule 37    if -> IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
Rule 38    lelseif -> lelseif elseif
Rule 39    lelseif -> elseif
Rule 40    elseif -> ELSE IF expresion LLAVEIZQ instrucciones LLAVEDER
Rule 41    else -> ELSE LLAVEIZQ instrucciones LLAVEDER
Rule 42    match -> MATCH expresion LLAVEIZQ brazos LLAVEDER
Rule 43    brazos -> brazos brazo
Rule 44    brazos -> brazo
Rule 45    brazo -> coincidencias IGUAL MAYORQUE LLAVEIZQ instrucciones LLAVEDER
Rule 46    brazo -> coincidencias IGUAL MAYORQUE instr_match COMA
Rule 47    coincidencias -> coincidencias BARRAS coincidencia
Rule 48    coincidencias -> coincidencia
Rule 49    coincidencia -> expresion
Rule 50    coincidencia -> GUIONB
Rule 51    instr_match -> imprimir
Rule 52    instr_match -> if
Rule 53    instr_match -> while
Rule 54    instr_match -> break
Rule 55    instr_match -> continue
Rule 56    instr_match -> loop
Rule 57    instr_match -> match
Rule 58    instr_match -> declaracion
Rule 59    instr_match -> asignacion
Rule 60    instr_match -> forin
Rule 61    loop -> LOOP LLAVEIZQ instrucciones LLAVEDER
Rule 62    while -> WHILE expresion LLAVEIZQ instrucciones LLAVEDER
Rule 63    forin -> FOR ID IN expresion LLAVEIZQ instrucciones LLAVEDER
Rule 64    forin -> FOR ID IN expresion PTO PTO expresion LLAVEIZQ instrucciones LLAVEDER
Rule 65    break -> BREAK
Rule 66    continue -> CONTINUE
Rule 67    tipo -> I64
Rule 68    tipo -> F64
Rule 69    tipo -> BOOL
Rule 70    tipo -> CHAR
Rule 71    tipo -> STRING
Rule 72    tipo -> USIZE
Rule 73    expresiones -> expresiones COMA expresion
Rule 74    expresiones -> expresion
Rule 75    expresiones -> <empty>
Rule 76    expresion -> ENTERO
Rule 77    expresion -> DECIMAL
Rule 78    expresion -> TRUE
Rule 79    expresion -> FALSE
Rule 80    expresion -> tostring
Rule 81    expresion -> toowned
Rule 82    tostring -> expresion PTO TOSTRING PARIZQ PARDER
Rule 83    toowned -> expresion PTO TOOWNED PARIZQ PARDER
Rule 84    expresion -> CADENA
Rule 85    expresion -> CARACTER
Rule 86    expresion -> expresion MAS expresion
Rule 87    expresion -> expresion MENOS expresion
Rule 88    expresion -> expresion POR expresion
Rule 89    expresion -> expresion DIVIDIDO expresion
Rule 90    expresion -> expresion MODULO expresion
Rule 91    expresion -> MENOS expresion
Rule 92    expresion -> NOT expresion
Rule 93    expresion -> I64 DDOSPT POW PARIZQ expresion COMA expresion PARDER
Rule 94    expresion -> F64 DDOSPT POWF PARIZQ expresion COMA expresion PARDER
Rule 95    expresion -> expresion IGUALQUE expresion
Rule 96    expresion -> expresion NOIGUALQUE expresion
Rule 97    expresion -> expresion MENORQUE expresion
Rule 98    expresion -> expresion MAYORQUE expresion
Rule 99    expresion -> expresion MENORIQUE expresion
Rule 100   expresion -> expresion MAYORIQUE expresion
Rule 101   expresion -> expresion OR expresion
Rule 102   expresion -> expresion AND expresion
Rule 103   expresion -> PARIZQ expresion PARDER
Rule 104   expresion -> CORIZQ expresiones CORDER
Rule 105   expresion -> CORIZQ expresion PTCOMA expresion CORDER
Rule 106   expresion -> PARIZQ expresion AS tipo PARDER
Rule 107   expresion -> nativas_fun
Rule 108   nativas_fun -> expresion PTO ABS PARIZQ PARDER
Rule 109   nativas_fun -> expresion PTO SQRT PARIZQ PARDER
Rule 110   nativas_fun -> expresion PTO CLONE PARIZQ PARDER

Terminals, with rules where they appear

ABS                  : 108
AND                  : 102
AS                   : 106
BARRAS               : 47
BOOL                 : 69
BREAK                : 65
CADENA               : 84
CAPACITY             : 22
CARACTER             : 85
CHAR                 : 70
CLONE                : 110
COMA                 : 46 73 93 94
CONTAINS             : 23
CONTINUE             : 66
CORDER               : 16 17 33 104 105
CORIZQ               : 16 17 33 104 105
DDOSPT               : 18 19 93 94
DECIMAL              : 77
DIVIDIDO             : 89
DOSPT                : 25 27
ELSE                 : 40 41
ENTERO               : 76
F64                  : 68 94
FALSE                : 79
FN                   : 2
FOR                  : 63 64
GUIONB               : 50
I64                  : 67 93
ID                   : 25 26 27 28 29 30 63 64
IF                   : 34 35 36 37 40
IGUAL                : 25 26 27 28 29 30 45 46
IGUALQUE             : 95
IN                   : 63 64
INSERT               : 
LEN                  : 21
LET                  : 25 26 27 28
LLAVEDER             : 2 34 35 36 37 40 41 42 45 61 62 63 64
LLAVEIZQ             : 2 34 35 36 37 40 41 42 45 61 62 63 64
LOOP                 : 61
MAIN                 : 2
MAS                  : 86
MATCH                : 42
MAYORIQUE            : 100
MAYORQUE             : 45 46 98
MENORIQUE            : 99
MENORQUE             : 97
MENOS                : 87 91
MODULO               : 90
MUT                  : 25 26
NEW                  : 18
NOIGUALQUE           : 96
NOT                  : 16 17 24 92
OR                   : 101
PARDER               : 2 18 19 21 22 23 24 82 83 93 94 103 106 108 109 110
PARIZQ               : 2 18 19 21 22 23 24 82 83 93 94 103 106 108 109 110
POR                  : 88
POW                  : 93
POWF                 : 94
PRINTLN              : 24
PTCOMA               : 6 9 10 13 14 17 105
PTO                  : 21 22 23 64 64 82 83 108 109 110
PUSH                 : 
REMOVE               : 
RETURN               : 
SIGNOI               : 23
SQRT                 : 109
STR                  : 
STRING               : 71
TOOWNED              : 83
TOSTRING             : 82
TRUE                 : 78
USIZE                : 72
VEC                  : 16 17
VVEC                 : 18 19
WHILE                : 62
WITH_CAPACITY        : 19
error                : 

Nonterminals, with rules where they appear

asignacion           : 14 59
brazo                : 43 44
brazos               : 42 43
break                : 10 54
coincidencia         : 47 48
coincidencias        : 45 46 47
continue             : 9 55
declaracion          : 13 58
else                 : 35 37
elseif               : 38 39
expresion            : 17 17 19 21 22 23 23 25 26 27 28 29 30 33 34 35 36 37 40 42 49 62 63 64 64 73 74 82 83 86 86 87 87 88 88 89 89 90 90 91 92 93 93 94 94 95 95 96 96 97 97 98 98 99 99 100 100 101 101 102 102 103 105 105 106 108 109 110
expresiones          : 16 24 73 104
forin                : 15 60
if                   : 7 52
imprimir             : 6 51
indice               : 31 32
indices              : 30 31
inicio               : 0
instr_match          : 46
instruccion          : 3 4
instrucciones        : 1 1 2 3 34 35 36 37 40 41 45 61 62 63 64
lelseif              : 36 37 38
loop                 : 11 56
main                 : 1
match                : 12 57
nativas_fun          : 107
nativas_vec          : 20
tipo                 : 25 27 106
toowned              : 81
tostring             : 80
while                : 8 53

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones main instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instrucciones -> .
    (6) instruccion -> . imprimir PTCOMA
    (7) instruccion -> . if
    (8) instruccion -> . while
    (9) instruccion -> . continue PTCOMA
    (10) instruccion -> . break PTCOMA
    (11) instruccion -> . loop
    (12) instruccion -> . match
    (13) instruccion -> . declaracion PTCOMA
    (14) instruccion -> . asignacion PTCOMA
    (15) instruccion -> . forin
    (24) imprimir -> . PRINTLN NOT PARIZQ expresiones PARDER
    (34) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER
    (35) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER else
    (36) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif
    (37) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
    (62) while -> . WHILE expresion LLAVEIZQ instrucciones LLAVEDER
    (66) continue -> . CONTINUE
    (65) break -> . BREAK
    (61) loop -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (42) match -> . MATCH expresion LLAVEIZQ brazos LLAVEDER
    (25) declaracion -> . LET MUT ID DOSPT tipo IGUAL expresion
    (26) declaracion -> . LET MUT ID IGUAL expresion
    (27) declaracion -> . LET ID DOSPT tipo IGUAL expresion
    (28) declaracion -> . LET ID IGUAL expresion
    (29) asignacion -> . ID IGUAL expresion
    (30) asignacion -> . ID indices IGUAL expresion
    (63) forin -> . FOR ID IN expresion LLAVEIZQ instrucciones LLAVEDER
    (64) forin -> . FOR ID IN expresion PTO PTO expresion LLAVEIZQ instrucciones LLAVEDER

  ! shift/reduce conflict for PRINTLN resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for CONTINUE resolved as shift
  ! shift/reduce conflict for BREAK resolved as shift
  ! shift/reduce conflict for LOOP resolved as shift
  ! shift/reduce conflict for MATCH resolved as shift
  ! shift/reduce conflict for LET resolved as shift
  ! shift/reduce conflict for ID resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    FN              reduce using rule 5 (instrucciones -> .)
    PRINTLN         shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    CONTINUE        shift and go to state 17
    BREAK           shift and go to state 18
    LOOP            shift and go to state 19
    MATCH           shift and go to state 20
    LET             shift and go to state 21
    ID              shift and go to state 22
    FOR             shift and go to state 23

  ! PRINTLN         [ reduce using rule 5 (instrucciones -> .) ]
  ! IF              [ reduce using rule 5 (instrucciones -> .) ]
  ! WHILE           [ reduce using rule 5 (instrucciones -> .) ]
  ! CONTINUE        [ reduce using rule 5 (instrucciones -> .) ]
  ! BREAK           [ reduce using rule 5 (instrucciones -> .) ]
  ! LOOP            [ reduce using rule 5 (instrucciones -> .) ]
  ! MATCH           [ reduce using rule 5 (instrucciones -> .) ]
  ! LET             [ reduce using rule 5 (instrucciones -> .) ]
  ! ID              [ reduce using rule 5 (instrucciones -> .) ]
  ! FOR             [ reduce using rule 5 (instrucciones -> .) ]

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir                       shift and go to state 4
    if                             shift and go to state 5
    while                          shift and go to state 6
    continue                       shift and go to state 7
    break                          shift and go to state 8
    loop                           shift and go to state 9
    match                          shift and go to state 10
    declaracion                    shift and go to state 11
    asignacion                     shift and go to state 12
    forin                          shift and go to state 13

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones . main instrucciones
    (3) instrucciones -> instrucciones . instruccion
    (2) main -> . FN MAIN PARIZQ PARDER LLAVEIZQ instrucciones LLAVEDER
    (6) instruccion -> . imprimir PTCOMA
    (7) instruccion -> . if
    (8) instruccion -> . while
    (9) instruccion -> . continue PTCOMA
    (10) instruccion -> . break PTCOMA
    (11) instruccion -> . loop
    (12) instruccion -> . match
    (13) instruccion -> . declaracion PTCOMA
    (14) instruccion -> . asignacion PTCOMA
    (15) instruccion -> . forin
    (24) imprimir -> . PRINTLN NOT PARIZQ expresiones PARDER
    (34) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER
    (35) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER else
    (36) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif
    (37) if -> . IF expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
    (62) while -> . WHILE expresion LLAVEIZQ instrucciones LLAVEDER
    (66) continue -> . CONTINUE
    (65) break -> . BREAK
    (61) loop -> . LOOP LLAVEIZQ instrucciones LLAVEDER
    (42) match -> . MATCH expresion LLAVEIZQ brazos LLAVEDER
    (25) declaracion -> . LET MUT ID DOSPT tipo IGUAL expresion
    (26) declaracion -> . LET MUT ID IGUAL expresion
    (27) declaracion -> . LET ID DOSPT tipo IGUAL expresion
    (28) declaracion -> . LET ID IGUAL expresion
    (29) asignacion -> . ID IGUAL expresion
    (30) asignacion -> . ID indices IGUAL expresion
    (63) forin -> . FOR ID IN expresion LLAVEIZQ instrucciones LLAVEDER
    (64) forin -> . FOR ID IN expresion PTO PTO expresion LLAVEIZQ instrucciones LLAVEDER

    FN              shift and go to state 26
    PRINTLN         shift and go to state 14
    IF              shift and go to state 15
    WHILE           shift and go to state 16
    CONTINUE        shift and go to state 17
    BREAK           shift and go to state 18
    LOOP            shift and go to state 19
    MATCH           shift and go to state 20
    LET             shift and go to state 21
    ID              shift and go to state 22
    FOR             shift and go to state 23

    main                           shift and go to state 24
    instruccion                    shift and go to state 25
    imprimir                       shift and go to state 4
    if                             shift and go to state 5
    while                          shift and go to state 6
    continue                       shift and go to state 7
    break                          shift and go to state 8
    loop                           shift and go to state 9
    match                          shift and go to state 10
    declaracion                    shift and go to state 11
    asignacion                     shift and go to state 12
    forin                          shift and go to state 13

state 3

    (4) instrucciones -> instruccion .

    FN              reduce using rule 4 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 4 (instrucciones -> instruccion .)
    IF              reduce using rule 4 (instrucciones -> instruccion .)
    WHILE           reduce using rule 4 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 4 (instrucciones -> instruccion .)
    BREAK           reduce using rule 4 (instrucciones -> instruccion .)
    LOOP            reduce using rule 4 (instrucciones -> instruccion .)
    MATCH           reduce using rule 4 (instrucciones -> instruccion .)
    LET             reduce using rule 4 (instrucciones -> instruccion .)
    ID              reduce using rule 4 (instrucciones -> instruccion .)
    FOR             reduce using rule 4 (instrucciones -> instruccion .)
    $end            reduce using rule 4 (instrucciones -> instruccion .)
    LLAVEDER        reduce using rule 4 (instrucciones -> instruccion .)


state 4

    (6) instruccion -> imprimir . PTCOMA

    PTCOMA          shift and go to state 27


state 5

    (7) instruccion -> if .

    FN              reduce using rule 7 (instruccion -> if .)
    PRINTLN         reduce using rule 7 (instruccion -> if .)
    IF              reduce using rule 7 (instruccion -> if .)
    WHILE           reduce using rule 7 (instruccion -> if .)
    CONTINUE        reduce using rule 7 (instruccion -> if .)
    BREAK           reduce using rule 7 (instruccion -> if .)
    LOOP            reduce using rule 7 (instruccion -> if .)
    MATCH           reduce using rule 7 (instruccion -> if .)
    LET             reduce using rule 7 (instruccion -> if .)
    ID              reduce using rule 7 (instruccion -> if .)
    FOR             reduce using rule 7 (instruccion -> if .)
    $end            reduce using rule 7 (instruccion -> if .)
    LLAVEDER        reduce using rule 7 (instruccion -> if .)


state 6

    (8) instruccion -> while .

    FN              reduce using rule 8 (instruccion -> while .)
    PRINTLN         reduce using rule 8 (instruccion -> while .)
    IF              reduce using rule 8 (instruccion -> while .)
    WHILE           reduce using rule 8 (instruccion -> while .)
    CONTINUE        reduce using rule 8 (instruccion -> while .)
    BREAK           reduce using rule 8 (instruccion -> while .)
    LOOP            reduce using rule 8 (instruccion -> while .)
    MATCH           reduce using rule 8 (instruccion -> while .)
    LET             reduce using rule 8 (instruccion -> while .)
    ID              reduce using rule 8 (instruccion -> while .)
    FOR             reduce using rule 8 (instruccion -> while .)
    $end            reduce using rule 8 (instruccion -> while .)
    LLAVEDER        reduce using rule 8 (instruccion -> while .)


state 7

    (9) instruccion -> continue . PTCOMA

    PTCOMA          shift and go to state 28


state 8

    (10) instruccion -> break . PTCOMA

    PTCOMA          shift and go to state 29


state 9

    (11) instruccion -> loop .

    FN              reduce using rule 11 (instruccion -> loop .)
    PRINTLN         reduce using rule 11 (instruccion -> loop .)
    IF              reduce using rule 11 (instruccion -> loop .)
    WHILE           reduce using rule 11 (instruccion -> loop .)
    CONTINUE        reduce using rule 11 (instruccion -> loop .)
    BREAK           reduce using rule 11 (instruccion -> loop .)
    LOOP            reduce using rule 11 (instruccion -> loop .)
    MATCH           reduce using rule 11 (instruccion -> loop .)
    LET             reduce using rule 11 (instruccion -> loop .)
    ID              reduce using rule 11 (instruccion -> loop .)
    FOR             reduce using rule 11 (instruccion -> loop .)
    $end            reduce using rule 11 (instruccion -> loop .)
    LLAVEDER        reduce using rule 11 (instruccion -> loop .)


state 10

    (12) instruccion -> match .

    FN              reduce using rule 12 (instruccion -> match .)
    PRINTLN         reduce using rule 12 (instruccion -> match .)
    IF              reduce using rule 12 (instruccion -> match .)
    WHILE           reduce using rule 12 (instruccion -> match .)
    CONTINUE        reduce using rule 12 (instruccion -> match .)
    BREAK           reduce using rule 12 (instruccion -> match .)
    LOOP            reduce using rule 12 (instruccion -> match .)
    MATCH           reduce using rule 12 (instruccion -> match .)
    LET             reduce using rule 12 (instruccion -> match .)
    ID              reduce using rule 12 (instruccion -> match .)
    FOR             reduce using rule 12 (instruccion -> match .)
    $end            reduce using rule 12 (instruccion -> match .)
    LLAVEDER        reduce using rule 12 (instruccion -> match .)


state 11

    (13) instruccion -> declaracion . PTCOMA

    PTCOMA          shift and go to state 30


state 12

    (14) instruccion -> asignacion . PTCOMA

    PTCOMA          shift and go to state 31


state 13

    (15) instruccion -> forin .

    FN              reduce using rule 15 (instruccion -> forin .)
    PRINTLN         reduce using rule 15 (instruccion -> forin .)
    IF              reduce using rule 15 (instruccion -> forin .)
    WHILE           reduce using rule 15 (instruccion -> forin .)
    CONTINUE        reduce using rule 15 (instruccion -> forin .)
    BREAK           reduce using rule 15 (instruccion -> forin .)
    LOOP            reduce using rule 15 (instruccion -> forin .)
    MATCH           reduce using rule 15 (instruccion -> forin .)
    LET             reduce using rule 15 (instruccion -> forin .)
    ID              reduce using rule 15 (instruccion -> forin .)
    FOR             reduce using rule 15 (instruccion -> forin .)
    $end            reduce using rule 15 (instruccion -> forin .)
    LLAVEDER        reduce using rule 15 (instruccion -> forin .)


state 14

    (24) imprimir -> PRINTLN . NOT PARIZQ expresiones PARDER

    NOT             shift and go to state 32


state 15

    (34) if -> IF . expresion LLAVEIZQ instrucciones LLAVEDER
    (35) if -> IF . expresion LLAVEIZQ instrucciones LLAVEDER else
    (36) if -> IF . expresion LLAVEIZQ instrucciones LLAVEDER lelseif
    (37) if -> IF . expresion LLAVEIZQ instrucciones LLAVEDER lelseif else
    (16) expresion -> . VEC NOT CORIZQ expresiones CORDER
    (17) expresion -> . VEC NOT CORIZQ expresion PTCOMA expresion CORDER
    (18) expresion -> . VVEC DDOSPT NEW PARIZQ PARDER
    (19) expresion -> . VVEC DDOSPT WITH_CAPACITY PARIZQ expresion PARDER
    (20) expresion -> . nativas_vec
    (76) expresion -> . ENTERO
    (77) expresion -> . DECIMAL
    (78) expresion -> . TRUE
    (79) expresion -> . FALSE
    (80) expresion -> . tostring
    (81) expresion -> . toowned
    (84) expresion -> . CADENA
    (85) expresion -> . CARACTER
    (86) expresion -> . expresion MAS expresion
    (87) expresion -> . expresion MENOS expresion
    (88) expresion -> . expresion POR expresion
    (89) expresion -> . expresion DIVIDIDO expresion
    (90) expresion -> . expresion MODULO expresion
    (91) expresion -> . MENOS expresion
    (92) expresion -> . NOT expresion
    (93) expresion -> . I64 DDOSPT POW PARIZQ expresion COMA expresion PARDER
    (94) expresion -> . F64 DDOSPT POWF PARIZQ expresion COMA expresion PARDER
    (95) expresion -> . expresion IGUALQUE expresion
    (96) expresion -> . expresion NOIGUALQUE expresion
    (97) expresion -> . expresion MENORQUE expresion
    (98) expresion -> . expresion MAYORQUE expresion
    (99) expresion -> . expresion MENORIQUE expresion
    (100) expresion -> . expresion MAYORIQUE expresion
    (101) expresion -> . expresion OR expresion
    (102) expresion -> . expresion AND expresion
    (103) expresion -> . PARIZQ expresion PARDER
    (104) expresion -> . CORIZQ expresiones CORDER
    (105) expresion -> . CORIZQ expresion PTCOMA expresion CORDER
    (106) expresion -> . PARIZQ expresion AS tipo PARDER
    (107) expresion -> . nativas_fun
    (21) nativas_vec -> . expresion PTO LEN PARIZQ PARDER
    (22) nativas_vec -> . expresion PTO CAPACITY PARIZQ PARDER
    (23) nativas_vec -> . expresion PTO CONTAINS PARIZQ SIGNOI expresion PARDER
    (82) tostring -> . expresion PTO TOSTRING PARIZQ PARDER
    (83) toowned -> . expresion PTO TOOWNED PARIZQ PARDER
    (108) nativas_fun -> . expresion PTO ABS PARIZQ PARDER
    (109) nativas_fun -> . expresion PTO SQRT PARIZQ PARDER
    (110) nativas_fun -> . expresion PTO CLONE PARIZQ PARDER

    VEC             shift and go to state 34
    VVEC            shift and go to state 37
    ENTERO          shift and go to state 40
    DECIMAL         shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    CADENA          shift and go to state 46
    CARACTER        shift and go to state 47
    MENOS           shift and go to state 48
    NOT             shift and go to state 35
    I64             shift and go to state 49
    F64             shift and go to state 50
    PARIZQ          shift and go to state 38
    CORIZQ          shift and go to state 36

    expresion                      shift and go to state 33
    nativas_vec                    shift and go to state 39
    tostring                       shift and go to state 44
    toowned                        shift and go to state 45
    nativas_fun                    shift and go to state 51

state 16

    (62) while -> WHILE . expresion LLAVEIZQ instrucciones LLAVEDER
    (16) expresion -> . VEC NOT CORIZQ expresiones CORDER
    (17) expresion -> . VEC NOT CORIZQ expresion PTCOMA expresion CORDER
    (18) expresion -> . VVEC DDOSPT NEW PARIZQ PARDER
    (19) expresion -> . VVEC DDOSPT WITH_CAPACITY PARIZQ expresion PARDER
    (20) expresion -> . nativas_vec
    (76) expresion -> . ENTERO
    (77) expresion -> . DECIMAL
    (78) expresion -> . TRUE
    (79) expresion -> . FALSE
    (80) expresion -> . tostring
    (81) expresion -> . toowned
    (84) expresion -> . CADENA
    (85) expresion -> . CARACTER
    (86) expresion -> . expresion MAS expresion
    (87) expresion -> . expresion MENOS expresion
    (88) expresion -> . expresion POR expresion
    (89) expresion -> . expresion DIVIDIDO expresion
    (90) expresion -> . expresion MODULO expresion
    (91) expresion -> . MENOS expresion
    (92) expresion -> . NOT expresion
    (93) expresion -> . I64 DDOSPT POW PARIZQ expresion COMA expresion PARDER
    (94) expresion -> . F64 DDOSPT POWF PARIZQ expresion COMA expresion PARDER
    (95) expresion -> . expresion IGUALQUE expresion
    (96) expresion -> . expresion NOIGUALQUE expresion
    (97) expresion -> . expresion MENORQUE expresion
    (98) expresion -> . expresion MAYORQUE expresion
    (99) expresion -> . expresion MENORIQUE expresion
    (100) expresion -> . expresion MAYORIQUE expresion
    (101) expresion -> . expresion OR expresion
    (102) expresion -> . expresion AND expresion
    (103) expresion -> . PARIZQ expresion PARDER
    (104) expresion -> . CORIZQ expresiones CORDER
    (105) expresion -> . CORIZQ expresion PTCOMA expresion CORDER
    (106) expresion -> . PARIZQ expresion AS tipo PARDER
    (107) expresion -> . nativas_fun
    (21) nativas_vec -> . expresion PTO LEN PARIZQ PARDER
    (22) nativas_vec -> . expresion PTO CAPACITY PARIZQ PARDER
    (23) nativas_vec -> . expresion PTO CONTAINS PARIZQ SIGNOI expresion PARDER
    (82) tostring -> . expresion PTO TOSTRING PARIZQ PARDER
    (83) toowned -> . expresion PTO TOOWNED PARIZQ PARDER
    (108) nativas_fun -> . expresion PTO ABS PARIZQ PARDER
    (109) nativas_fun -> . expresion PTO SQRT PARIZQ PARDER
    (110) nativas_fun -> . expresion PTO CLONE PARIZQ PARDER

    VEC             shift and go to state 34
    VVEC            shift and go to state 37
    ENTERO          shift and go to state 40
    DECIMAL         shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    CADENA          shift and go to state 46
    CARACTER        shift and go to state 47
    MENOS           shift and go to state 48
    NOT             shift and go to state 35
    I64             shift and go to state 49
    F64             shift and go to state 50
    PARIZQ          shift and go to state 38
    CORIZQ          shift and go to state 36

    expresion                      shift and go to state 52
    nativas_vec                    shift and go to state 39
    tostring                       shift and go to state 44
    toowned                        shift and go to state 45
    nativas_fun                    shift and go to state 51

state 17

    (66) continue -> CONTINUE .

    PTCOMA          reduce using rule 66 (continue -> CONTINUE .)
    COMA            reduce using rule 66 (continue -> CONTINUE .)


state 18

    (65) break -> BREAK .

    PTCOMA          reduce using rule 65 (break -> BREAK .)
    COMA            reduce using rule 65 (break -> BREAK .)


state 19

    (61) loop -> LOOP . LLAVEIZQ instrucciones LLAVEDER

    LLAVEIZQ        shift and go to state 53


state 20

    (42) match -> MATCH . expresion LLAVEIZQ brazos LLAVEDER
    (16) expresion -> . VEC NOT CORIZQ expresiones CORDER
    (17) expresion -> . VEC NOT CORIZQ expresion PTCOMA expresion CORDER
    (18) expresion -> . VVEC DDOSPT NEW PARIZQ PARDER
    (19) expresion -> . VVEC DDOSPT WITH_CAPACITY PARIZQ expresion PARDER
    (20) expresion -> . nativas_vec
    (76) expresion -> . ENTERO
    (77) expresion -> . DECIMAL
    (78) expresion -> . TRUE
    (79) expresion -> . FALSE
    (80) expresion -> . tostring
    (81) expresion -> . toowned
    (84) expresion -> . CADENA
    (85) expresion -> . CARACTER
    (86) expresion -> . expresion MAS expresion
    (87) expresion -> . expresion MENOS expresion
    (88) expresion -> . expresion POR expresion
    (89) expresion -> . expresion DIVIDIDO expresion
    (90) expresion -> . expresion MODULO expresion
    (91) expresion -> . MENOS expresion
    (92) expresion -> . NOT expresion
    (93) expresion -> . I64 DDOSPT POW PARIZQ expresion COMA expresion PARDER
    (94) expresion -> . F64 DDOSPT POWF PARIZQ expresion COMA expresion PARDER
    (95) expresion -> . expresion IGUALQUE expresion
    (96) expresion -> . expresion NOIGUALQUE expresion
    (97) expresion -> . expresion MENORQUE expresion
    (98) expresion -> . expresion MAYORQUE expresion
    (99) expresion -> . expresion MENORIQUE expresion
    (100) expresion -> . expresion MAYORIQUE expresion
    (101) expresion -> . expresion OR expresion
    (102) expresion -> . expresion AND expresion
    (103) expresion -> . PARIZQ expresion PARDER
    (104) expresion -> . CORIZQ expresiones CORDER
    (105) expresion -> . CORIZQ expresion PTCOMA expresion CORDER
    (106) expresion -> . PARIZQ expresion AS tipo PARDER
    (107) expresion -> . nativas_fun
    (21) nativas_vec -> . expresion PTO LEN PARIZQ PARDER
    (22) nativas_vec -> . expresion PTO CAPACITY PARIZQ PARDER
    (23) nativas_vec -> . expresion PTO CONTAINS PARIZQ SIGNOI expresion PARDER
    (82) tostring -> . expresion PTO TOSTRING PARIZQ PARDER
    (83) toowned -> . expresion PTO TOOWNED PARIZQ PARDER
    (108) nativas_fun -> . expresion PTO ABS PARIZQ PARDER
    (109) nativas_fun -> . expresion PTO SQRT PARIZQ PARDER
    (110) nativas_fun -> . expresion PTO CLONE PARIZQ PARDER

    VEC             shift and go to state 34
    VVEC            shift and go to state 37
    ENTERO          shift and go to state 40
    DECIMAL         shift and go to state 41
    TRUE            shift and go to state 42
    FALSE           shift and go to state 43
    CADENA          shift and go to state 46
    CARACTER        shift and go to state 47
    MENOS           shift and go to state 48
    NOT             shift and go to state 35
    I64             shift and go to state 49
    F64             shift and go to state 50
    PARIZQ          shift and go to state 38
    CORIZQ          shift and go to state 36

    expresion                      shift and go to state 54
    nativas_vec                    shift and go to state 39
    tostring                       shift and go to state 44
    toowned                        shift and go to state 45
    nativas_fun                    shift and go to state 51

state 21

    (25) declaracion -> LET . MUT ID DOSPT tipo IGUAL expresion
    (26) declaracion -> LET . MUT ID IGUAL expresion
    (27) declaracion -> LET . ID DOSPT tipo IGUAL expresion
    (28) declaracion -> LET . ID IGUAL expresion

    MUT             shift and go to state 55
    ID              shift and go to state 56


state 22

    (29) asignacion -> ID . IGUAL expresion
    (30) asignacion -> ID . indices IGUAL expresion
    (31) indices -> . indices indice
    (32) indices -> . indice
    (33) indice -> . CORIZQ expresion CORDER

    IGUAL           shift and go to state 57
    CORIZQ          shift and go to state 60

    indices                        shift and go to state 58
    indice                         shift and go to state 59

state 23

    (63) forin -> FOR . ID IN expresion LLAVEIZQ instrucciones LLAVEDER
